--- a/EigenFaces.ipynb
+++ b/EigenFaces.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "#----------------------------Implement your code here-----------------------\n",
     "\n",
-    "mu_orig = X.mean(axis=0)  # reducing the mean of each row.\n",
+    "mu_orig = X.mean(axis=0)  # reducing the mean of each column (in order to calculate the mean of the same pixel in all images).\n",
     "\n",
     "X -= np.ones(shape=X.shape)*mu_orig\n",
     "#---------------------------------------------------------------------------"
@@ -280,7 +280,6 @@
    ],
    "source": [
     "eigenvec_mat = pca.components_\n",
-    "# Todo: Ask!!\n",
     "plot_eigenfaces(eigenvec_mat, h, w)"
    ]
   },
@@ -393,6 +392,8 @@
     "    \n",
     "    \n",
     "#     c[i] = np.dot(flattened_img, U[i,:])\n",
+    "\n",
+    "# eigen vectors should have norm=1, we normalize with the ||v||^2 just for formulary. \n",
     "#--------------------------------------------------------------------------"
    ]
   },
